CU-b4y1g1 add hive url test case